--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ var busStop = new google.maps.LatLng(40.729559678851025, -73.99074196815491);
 var cafe = new google.maps.LatLng(40.730031233910694, -73.99142861366272);
 var bank = new google.maps.LatLng(40.72968163306612, -73.9911389350891);
 
+var coordsToggle = false;
+
 function initialize() {
 
   // Set up the map
@@ -69,10 +71,20 @@ var markerImage =
       //icon: markerImage,
       title: 'Cray-2'
   });
+  
+  var secondMarker = new google.maps.Marker({
+	  position: new google.maps.LatLng(48.866478, 2.355385999999953),
+	  map: map,
+	  title: 'iPod'
+  })
 
   google.maps.event.addListener(marker, 'click', function() {
 	  goto('http://www.google.fr');
   });
+  
+  google.maps.event.addListener(secondMarker,'click',function(){
+	  infowindow.open(panorama,secondMarker);
+  })
 
   // We get the map's default panorama and set up some defaults.
   // Note that we don't yet set it visible.
@@ -96,9 +108,16 @@ function toggleStreetView() {
 }
 
 function displayPanoInfo() {
-	alert(panorama.getPov());
+	alert(panorama.getPosition());
 } 
 
+
+function showCoords() {
+	alert("Cliquer sur un point de la carte pour obtenir ses coordonnées");
+	    google.maps.event.addListenerOnce(map,'click',function(event) {
+			alert("Lat/Lng : " + event.latLng.lat() + ', ' + event.latLng.lng());
+	})
+}
 
 
 google.maps.event.addDomListener(window, 'load', initialize);
@@ -111,6 +130,7 @@ google.maps.event.addDomListener(window, 'load', initialize);
     <div id="panel" style="margin-left:-100px">
       <input type="button" value="Toggle Street View" onclick="toggleStreetView();"></input>
 	  <input type="button" value="Display Panorama Information" onclick="displayPanoInfo();"></input>
+	  <input type="button" value="Show Coordinates" onclick="showCoords();"></input>
     </div>
     <div id="map-canvas"></div>
   </body>
