--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Overlays within Street View</title>
+    <title>StreetView - Musée des Arts & Métiers</title>
     <style>
       html, body, #map-canvas {
         height: 100%;
@@ -20,7 +20,7 @@
         border: 1px solid #999;
       }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true"></script>	
     <script>
 	
 var goto = function ( url ) {
@@ -33,10 +33,7 @@ var goto = function ( url ) {
 var map;
 var panorama;
 var mamPlace = new google.maps.LatLng(48.866622,2.355450);
-var astorPlace = new google.maps.LatLng(40.729884, -73.990988);
-var busStop = new google.maps.LatLng(40.729559678851025, -73.99074196815491);
-var cafe = new google.maps.LatLng(40.730031233910694, -73.99142861366272);
-var bank = new google.maps.LatLng(40.72968163306612, -73.9911389350891);
+
 
 var coordsToggle = false;
 
@@ -96,6 +93,7 @@ var markerImage =
   }));
   panorama.setPano('-kD9Wz53MXB6qBohDERzkw');
   panorama.setVisible(true);
+ 
 }
 
 function toggleStreetView() {
@@ -108,7 +106,7 @@ function toggleStreetView() {
 }
 
 function displayPanoInfo() {
-	alert(panorama.getPosition());
+	alert(panorama.getPosition() + " " + panorama.getPov().heading + " " + panorama.getPov().pitch + " " + panorama.getZoom());
 } 
 
 
@@ -122,16 +120,17 @@ function showCoords() {
 
 google.maps.event.addDomListener(window, 'load', initialize);
 
-
-
     </script>
   </head>
+  
   <body>
-    <div id="panel" style="margin-left:-100px">
+    <div id="panel" style="margin-left:-70px">
       <input type="button" value="Toggle Street View" onclick="toggleStreetView();"></input>
 	  <input type="button" value="Display Panorama Information" onclick="displayPanoInfo();"></input>
 	  <input type="button" value="Show Coordinates" onclick="showCoords();"></input>
+	  <div id="markerInfo"></div>
     </div>
-    <div id="map-canvas"></div>
+    <div id="map-canvas" style="top:0px;left:0px;"></div>
   </body>
+  
 </html>
